<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/white_light"

    tools:context="com.madhav.kotlinsample.ui.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_bg"
                android:orientation="vertical"
                android:paddingBottom="10dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="7dp">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:fontFamily="@font/lato_regular"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="13sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="7dp">

                    <AutoCompleteTextView
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:fontFamily="@font/lato_regular"
                        android:hint="@string/prompt_password"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="13sp" />

                </android.support.design.widget.TextInputLayout>


                <TextView
                    android:id="@+id/email_sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/button_bg"
                    android:fontFamily="@font/lato_regular"
                    android:gravity="center"
                    android:text="@string/action_sign_in"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/lato_regular"
                    android:text="or"
                    android:textSize="13sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="7dp"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        android:id="@+id/facebook_login"
                        android:layout_weight="1"
                        android:background="@drawable/login_bg"
                        android:gravity="center|center_vertical"
                        android:orientation="horizontal">

                        <android.support.v7.widget.AppCompatImageView
                            android:id="@+id/fb_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            app:srcCompat="@drawable/ic_facebook" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_toRightOf="@+id/fb_icon"
                            android:fontFamily="@font/lato_regular"
                            android:gravity="center_vertical"
                            android:text="Facebook"
                            android:textColor="@color/facebook_color"
                            android:textSize="13sp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:id="@+id/google_login"
                        android:background="@drawable/login_bg"
                        android:gravity="center|center_vertical"
                        android:orientation="horizontal">

                        <android.support.v7.widget.AppCompatImageView
                            android:id="@+id/google_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center|center_horizontal"
                            android:layout_marginLeft="5dp"
                            app:srcCompat="@drawable/ic_google" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_toRightOf="@+id/google_icon"
                            android:fontFamily="@font/lato_regular"
                            android:gravity="center_vertical"
                            android:text="Google"
                            android:textColor="@color/google_color"
                            android:textSize="13sp" />
                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/signup_bt"
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/dark_color"
                android:text="@string/register_text"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/lato_regular"/>
        </LinearLayout>


    </ScrollView>
</RelativeLayout>
